# Pipe-it

./: .coveragerc  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst
src/pipe_it/: __init__.py  basic.py  skeleton.py
tests/: conftest.py  test_skeleton.py
